--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Hawkhai
-description: Hawkhai personal website and blog.
-sourcecode: "https://github.com/hawkhai/hawkhai.github.io"
+title: SpecLab
+description: SpecLab blog.
+sourcecode: "https://github.com/SpecLab/speclab.github.io"
 
 permalink: blog/:year/:month/:day/:title
 exclude:
@@ -10,24 +10,20 @@ exclude:
   - "netroot"
   - "tempdir"
   - "UserDataSpider"
-  - "**/d2l-zh"
   - "**/.vs"
   - "**/Debug"
   - "**/Release"
-  - "**/opengl-3rd"
-  - "**/opengles3-book"
-  - "**/opengles-book-samples"
   - "**/*.selenium.png"
 keep_files:
   - "backup"
   - "invisible/backup"
 
-url: "https://blog.hawkhai.com" # the base hostname & protocol for your site
-urlx: "https://blog.hawkhai.com" # the base hostname & protocol for your site
+url: "https://speclab.github.io" # the base hostname & protocol for your site
+urlx: "https://speclab.github.io" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
 
 twitter_username:
-github_username: hawkhai
+github_username: SpecLab
 email_address: /assets/email.png
 
 author:
